[package]
edition = "2021"
name = "rgk-core"
description = "Common routines and intermediate API for RustGamingKit modules"
version = "2021.12.13"

[features]
default = []
bit_ext = ["bitvec"]
io_ext = []
nom_ext = ["nom"]

[dependencies]
bitflags = "1.3.2"
bitvec = { version = "0.22.3", optional = true }
nom = { version = "7.1.0", optional = true }
thiserror = "1.0.30"
ultraviolet = "0.8.1"
