[package]
edition = "2021"
name = "rgk-processors-astro8"
description = "Proof of concept Astro 8 implementation"
version = "2023.1.13"

[dependencies]
bitflags = "1.3.2"
bytes = "1.3.0"
nom = { version = "7.1.1", features = ["alloc"] }
rgk_processors_core = { package = "rgk-processors-core", path = "../core" }
