[package]
edition = "2021"
name = "rgk-models-3dsmax"
description = "(Partial) 3DSMax model support for RustGamingKit"
version = "2021.12.9"

[features]
default = ["import"]
import = ["nom"]
export = []

[dependencies]
bitflags = "1.3.2"
nom = { version = "7.1.0", optional = true }
thiserror = "1.0.30"
ultraviolet = "0.8.1"
rgk_core = { package = "rgk-core", path = "../../core", features = ["nom_ext"] }
