[package]
edition = "2021"
name = "rgk-models-assimp"
description = "Assimp support for RustGamingKit"
version = "2021.12.9"

[features]
default = ["import"]
import = []
export = []

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
flate2 = "1.0.22"
thiserror = "1.0.30"
ultraviolet = "0.8.1"
meshio_core = { package = "meshio-core", path = "../../core", features = ["io_ext"] }
