[package]
edition = "2021"
name = "rgk-models-directx"
description = "DirectX model support for RustGamingKit"
version = "2021.12.9"

[features]
default = ["import"]
import = ["nom"]
export = []

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
nom = { version = "7.1.0", optional = true }
thiserror = "1.0.30"
ultraviolet = "0.8.1"
uuid = "0.8.2"
rgk_core = { package = "rgk-core", path = "../../core", features = ["io_ext", "nom_ext"] }
