[package]
edition = "2021"
name = "rgk-models-khronos"
description = "Khronos Group model support for RustGamingKit"
version = "2021.12.4"

[features]
default = ["import"]
import = []
export = []

[dependencies]
base64 = "0.13.0"
byteorder = "1.4.3"
json = "0.12.4"
mime = "0.3.16"
thiserror = "1.0.30"
ultraviolet = "0.8.1"
rgk_core = { package = "rgk-core", path = "../../core", features = ["io_ext"] }
