[package]
edition = "2021"
name = "meshio-phyre"
description = "(Partial) Phyre 3D file format support for MeshIO"
version = "2021.11.24"

[features]
default = ["import"]
import = ["nom"]
export = []

[dependencies]
bitflags = "1.3.2"
bytes = "1.1.0"
thiserror = "1.0.30"
ultraviolet = "0.8.1"
meshio_core = { package = "meshio-core", path = "../core", features = ["parsers"] }
