[package]
edition = "2021"
name = "rgk-models-xnalara"
description = "XNALara support for MeshIO"
version = "2021.12.9"

[features]
default = ["import"]
import = ["nom"]
export = ["libc", "winapi"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "lmcons", "winbase"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.109", optional = true }
users = "0.11.0"

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
nom = { version = "7.1.0", optional = true }
thiserror = "1.0.30"
ultraviolet = "0.8.1"
rgk_core = { package = "rgk-core", path = "../../core", features = ["io_ext", "nom_ext"] }
