[package]
edition = "2021"
name = "rgk-textures-amiga"
description = "Amiga graphics support for RustGamingKit"
version = "2021.12.20"

[features]
default = ["import"]
import = ["thiserror"]
export = []

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
thiserror = { version = "1.0.30", optional = true }
rgk_core = { package = "rgk-core", path = "../../core" }
