[package]
edition = "2021"
name = "rgk-textures-x"
description = "X graphics support for RustGamingKit"
version = "2021.12.9"

[features]
default = ["import"]
import = ["nom"]
export = []

[dependencies]
bitflags = "1.3.2"
nom = { version = "7.1.0", optional = true }
thiserror = "1.0.30"
rgk_core = { package = "rgk-core", path = "../../core" }
