[package]
edition = "2021"
name = "rgk-textures-bitmap"
description = "Bitmap support for RustGamingKit"
version = "2021.12.9"

[features]
default = ["import"]
import = []
export = []

[dependencies]
bitflags = "1.3.2"
thiserror = "1.0.30"
rgk_core = { package = "rgk-core", path = "../../core", features = ["io_ext"] }
