[package]
edition = "2021"
name = "rgk-textures-bitmap"
description = "Bitmap support for RustGamingKit"
version = "2021.12.15"

[features]
default = ["import"]
import = []
export = []

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
thiserror = "1.0.30"
rgk_core = { package = "rgk-core", path = "../../core" }

[dev-dependencies]
rgk_textures_playstation = { package = "rgk-textures-playstation", path = "../playstation" }
