[package]
edition = "2021"
name = "rgk-processors-mos"
description = "MOS CPU series emulation"
version = "2023.2.4"

[features]
default = ["mos6502", "disassembler"]
assembler = ["dep:cfg-if", "dep:nom", "dep:thiserror"]
disassembler = ["dep:indexmap"]
mos6502 = []
csg65ce02 = ["mos6502"]
wdc65c02 = ["mos6502"]

[dependencies]
bitflags = "1.3.2"
cfg-if = { version = "1.0.0", optional = true }
indexmap = { version = "1.9.2", optional = true }
nom = { version = "7.1.3", features = ["alloc"], optional = true }
thiserror = { version = "1.0.38", optional = true }
rgk_processors_core = { package = "rgk-processors-core", path = "../../core" }
